--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 				<li><b>Telegram</b>: My nickname is composed by the first three letters of my family
 				name and the first three letters of my given name (with capital letters).  Usually I reply within a short
 				time.</li>
+				<li><b>IRC</b>: you can find me in
+					freenode with the same Telegram
+					username (with only lowercase
+					letters).
 				<li><b>Office</b>: You can find me during work hours at LIA, Laboratorio di Informatica
 				Avanzata at Viale risorgimento 2, Bologna.</li>
 				<li><b>Ulisse</b>: If you like to join or simply attend at the Ulisse team working you
