--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 	<div id="publications">
 		<h3>Publications</h3>
 		<ul>
+			<li>Berardi, Davide, et al. "Sustainable Infrastructure Monitoring for Security-Oriented Purposes." Proceedings of the 6th EAI International Conference on Smart Objects and Technologies for Social Good. 2020.</li>
 			<li>Berardi, Davide, et al. "TechNETium: Atomic Predicates and Model Driven Development to Verify Security Network Policies." 2020 IEEE 17th Annual Consumer Communications &amp; Networking Conference (CCNC). IEEE, 2020.</li>
 			<li>Berardi, Davide, et al. "Security network policy enforcement through a SDN framework." 2018 28th International Telecommunication Networks and Applications Conference (ITNAC). IEEE, 2018.</li>
 			<li>Melis, Andrea, et al. "A Policy Checker Approach for Secure Industrial SDN." 2018 2nd Cyber Security in Networking Conference (CSNet). IEEE, 2018.</li>
