--- a/index.html
+++ b/index.html
@@ -67,9 +67,20 @@
 	</div>
 
 	<div id="code">
-		<h3>Material and projects</h3>
+		<h3>Projects</h3>
 		<ul>
 			<li><a href="https://github.com/rd235/cado">CADO</a>: Capability DO (like a sudo providing users with just the capabilities they need)</li>
+		</ul>
+	</div>
+
+	<div id="material">
+		<h3>Useful Resources</h3>
+		<ul>
+			<li><a href="tesi.html">Istruzioni per la
+					stesura della tesi di laurea</a>
+				(Instruction to write Bachelor Thesis at
+				University of Bologna, in Italian
+				language).</li>
 		</ul>
 	</div>
 
