Specification of degree

--- a/tesi.html
+++ b/tesi.html
@@ -300,7 +300,8 @@
 			<p>
 			<h2>Presentazione</h2>
 			Le tesi triennali hanno a disposizione <b>solo 7
-			minuti</b> (per quanto riguarda ingegneria).
+			minuti</b> di presentazione (per quanto
+			riguarda Ingegneria Informatica).
 			Cercate di spiegare in questo poco tempo il
 			senso e la parte fondamentale di quello che
 			avete fatto.<br/>
