Charset and language

--- a/tesi.html
+++ b/tesi.html
@@ -1,5 +1,6 @@
-<html>
+<html lang="it">
 	<head>
+		<meta charset="utf-8"/>
 		<title>D. - Linee guida per la stesura della Tesi di Laurea</title>
 		<link rel="stylesheet" type="text/css" href="main.css"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
