--- a/tesi.html
+++ b/tesi.html
@@ -160,9 +160,10 @@
 					esistono vari, una buona scelta
 					può essere aspell su Linux.
 					Si può attivare su <tt>vim</tt>
-					nel seguente modo:<br/>
-					<code>:set spl=it</code><br/>
-					<code>:set spell</code><br/>
+					nel seguente modo:
+					<br/><br/>
+					<pre><code>:set spl=it
+:set spell </code></pre><br/>
 					A questo punto è sufficiente
 					seguire le istruzioni.<br/>
 					<br/>
@@ -174,14 +175,14 @@
 					</li>
 					<br/>
 				<li>Controllate apostrofi, accenti
-					ed errori comuni:<br/>
-					<code>s/un altra/un'altra/</code><br/>
-					<code>s/obbiettivo/obiettivo/</code><br/>
-					<code>s/sopratutto/soprattutto/</code><br/>
-					<code>s/perchè/perché/</code><br/>
-					<code>s/ é / è /</code><br/>
-					<code>s/ E' / È /</code><br/>
-					<code>s/interfaccie/interfacce/</code><br/></li><br/>
+					ed errori comuni:<br/><br/>
+					<pre><code>s/un altra/un'altra/
+s/obbiettivo/obiettivo/
+s/sopratutto/soprattutto/
+s/perchè/perché/
+s/ é / è /
+s/ E' / È /
+s/interfaccie/interfacce/</code></pre><br/></li><br/>
 				<li><b>Struttura frasi</b>.  Non fate
 							frasi troppo
 							lunghe, una
