Specification of presentation date

--- a/tesi.html
+++ b/tesi.html
@@ -319,8 +319,9 @@ s/interfaccie/interfacce/</code></pre><br/></li><br/>
 			strettamente necessari (in questo caso va bene
 			mettere tante immagini spiegandole a voce).<br/>
 			<br/>
-			La presentazione va inviata almeno un paio di
-			giorni prima agli stessi indirizzi.<br/>
+			La presentazione va inviata agli stessi
+			indirizzi, almeno un paio di giorni prima della
+			discussione di laurea.<br/>
 			<br/>
 			</p>
 			<hr/>
