--- a/tesi.html
+++ b/tesi.html
@@ -92,7 +92,8 @@
 						HTTPS attaccata e quali
 						sono le limitazioni.</li><br/>
 					<li><b>Analisi progettuale</b>..
-						Cosa vogliamo fare,
+						Cosa vogliamo
+						raggiungere,
 						perché e quali sono
 						state le vostre scelte
 						per lo sviluppo "su
@@ -309,10 +310,12 @@ s/interfaccie/interfacce/</code></pre><br/></li><br/>
 			avete fatto.<br/>
 			<br/>
 			Non c'è un template richiesto per la
-			presentazione, potete farla come più preferite,
-			consigliamo comunque di esportarla in PDF per
-			compatibilità tra i vari sistemi operativi.<br/>
-			<br/>
+			presentazione, potete realizzarla come più
+			preferite con i software che più preferite
+			(LaTeX, Google Slides, PowerPoint, LibreOffice
+			Impress, etc.), consigliamo di esportarla in PDF
+			per compatibilità tra i vari sistemi
+			operativi.<br/> <br/>
 			Consigliamo di limitare il numero di slides, non
 			è facile presentare 30 slides in 7 minuti.
 			Inoltre limitate i wall of text se non
