Little addition on presentation

--- a/tesi.html
+++ b/tesi.html
@@ -316,8 +316,9 @@ s/interfaccie/interfacce/</code></pre><br/></li><br/>
 			Impress, etc.), consigliamo di esportarla in PDF
 			per compatibilità tra i vari sistemi
 			operativi.<br/> <br/>
-			Consigliamo di limitare il numero di slides, non
-			è facile presentare 30 slides in 7 minuti.
+			Consigliamo di limitare il numero di slides a
+			circa 5 / 6, non è facile presentare 30 slides
+			in 7 minuti.
 			Inoltre limitate i wall of text se non
 			strettamente necessari (in questo caso va bene
 			mettere tante immagini spiegandole a voce).<br/>
