--- a/tesi.html
+++ b/tesi.html
@@ -274,10 +274,11 @@ s/interfaccie/interfacce/</code></pre><br/></li><br/>
 			<h2>Invio Tesi</h2>
 			Se stai eseguendo una tesi con il Prof. Prandini
 			ricordati di inviare ogni domanda <b>sempre</b>
-			ai seguenti indirizzi <tt>unibo.it</tt>:<br/>
-			<tt>a.melis</tt><br/>
-			<tt>davide.berardi6</tt><br/>
-			<tt>marco.prandini</tt><br/>
+			ai seguenti indirizzi
+			<tt>unibo.it</tt>:<br/><br/>
+			<pre><code>a.melis
+davide.berardi6
+marco.prandini</code></pre><br/><br/>
 			Non è necessario inviare la tesi capitolo per
 			capitolo.  Quando vi sentite pronti, potete
 			inviare alcune parti per capire se state
