mail configuration post

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 	<div id="blog">
 		<h3>Blog</h3>
 		<ul>
+			<li>27 Sep 2020 <a href="post/20200927-1.html">Reading emails: mutt + mbsync + mairix + imapfilter</a></li>
 			<li>04 Jun 2020 <a href="post/20200604-1.html">Flashing ice40hx8k-evb Open Source FPGA with an ft2232h</a></li>
 			<li>31 Mar 2020 <a href="post/20200331-1.html">Inject unsupported OSs in the cloud</a></li>
 			<li>20 Feb 2020 <a href="post/20200210-1.html">CVE-2020-2703</a></li>
