--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
 
 		<p>To reach me you can use the following methods:
 			<ul>
-				<li><b>e-mail</b>: my address is <code>${given_name}.${family_name}6@unibo.it</code> or
-				<code>${given_name}.${family_name}@studio.unibo.it</code>.
+				<li><b>e-mail</b>: my addresses are:
+					<ol>
+						<li><code>${given_name}.${family_name}@unibo.it</code></li>
+						<li><code>${given_name}.${family_name}6@unibo.it</code></li>
+						<li><code>${given_name}.${family_name}@studio.unibo.it</code></li>
+					</ol>
+
 				You can easily check the correct address searching me on the university site.
 				Please, avoid <code>html</code> mail as much as you can[1] and do not expect a
 				low latency reply.</li>
