GPIOs Raspberry pi

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 	<div id="blog">
 		<h3>Blog</h3>
 		<ul>
+			<li>04 Dec 2020 <a href="post/20201204-1.html">Simulating Raspberry PI GPIO interaction with QEMU</a></li>
 			<li>27 Sep 2020 <a href="post/20200927-1.html">Reading emails: mutt + mbsync + mairix + imapfilter</a></li>
 			<li>04 Jun 2020 <a href="post/20200604-1.html">Flashing ice40hx8k-evb Open Source FPGA with an ft2232h</a></li>
 			<li>31 Mar 2020 <a href="post/20200331-1.html">Inject unsupported OSs in the cloud</a></li>
