--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
 			<li>12 Jan 2020 <a href="post/20200112-1.html">Starting a new "blog"</a></li>
 		</ul>
 	</div>
+
+	<div id="other">
+		<h3>Other interests</h3>
+		<ul>
+			<li><a href="https://github.com/berdav/entombed">Procedural generation</a></li>
+			<li><a href="https://github.com/Music-Machine-Learning/IMprovEEsation">Music</a></li>
+			<li>Radio Communication</li>
+			<li>Mathematical models for juggling</li>
+		</ul>
+	</div>
 	<div id="footnotes">
 	<hr/>
 	[1] Come on...you saw this "site".
