MDPI + IEEE transaction

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 	<div id="publications">
 		<h3>Publications</h3>
 		<ul>
+			<li>Melis, Andrea, et al. "P-SCOR: Integration of Constraint Programming Orchestration and Programmable Data Plane." IEEE Transactions on Network and Service Management (2020).</li>
+			<li>Berardi, Davide, et al. "Password similarity using probabilistic data structures." Journal of Cybersecurity and Privacy 1.1 (2021): 78-92.</li>
 			<li>Berardi, Davide, et al. "Sustainable Infrastructure Monitoring for Security-Oriented Purposes." Proceedings of the 6th EAI International Conference on Smart Objects and Technologies for Social Good. 2020.</li>
 			<li>Berardi, Davide, et al. "TechNETium: Atomic Predicates and Model Driven Development to Verify Security Network Policies." 2020 IEEE 17th Annual Consumer Communications &amp; Networking Conference (CCNC). IEEE, 2020.</li>
 			<li>Berardi, Davide, et al. "Security network policy enforcement through a SDN framework." 2018 28th International Telecommunication Networks and Applications Conference (ITNAC). IEEE, 2018.</li>
