--- a/index.html
+++ b/index.html
@@ -84,11 +84,9 @@
 	<div id="material">
 		<h3>Useful Resources</h3>
 		<ul>
-			<li><span id=students>README for students!</span> <a href="tesi.html">Istruzioni per la
-					stesura della tesi di laurea</a>
-				(Instruction to write Bachelor Thesis at
-				University of Bologna, in Italian
-				language).</li>
+			<li><span id=students>README for students!</span> <a href="tesi.html">Istruzioni per la stesura della tesi di laurea</a> (Instruction to write Bachelor Thesis at University of Bologna, in Italian language).</li>
+			<li><a href="https://gitlab.com/ulisse_lab/teaching-material">Teaching material</a> for various security topics released under CopyLeft license</li>
+			<li><a href="https://www.youtube.com/channel/UCbvxfo0OWZMx6AJpnsZYiZg">Youtube channel of Ulisse group</a> with security seminars and video-lessons</li>
 		</ul>
 	</div>
 
