--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
 	</div>
 
 	<div id="code">
-		<h3>Projects</h3>
+		<h3>Projects and software</h3>
 		<ul>
 			<li><a href="https://github.com/rd235/cado">CADO</a>: Capability DO (like a sudo providing users with just the capabilities they need)</li>
+			<li><a href="https://github.com/berdav/snappy-fox">snappy-fox</a>: A Firefox morgue cache decompressor.</li>
+			<li><a href="https://github.com/berdav/unibo-test-mec">Unibo Test Mec</a>: A 5g edge cloud API tester.</li>
 		</ul>
 	</div>
 
