--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 					freenode with the same Telegram
 					username (with only lowercase
 					letters).
+				<li><b>Matrix</b>: My matrix account is <code>@family_name:ulis.se</code></li>
 				<li><b>Office</b>: You can find me during work hours at LIA, Laboratorio di Informatica
 				Avanzata at Viale risorgimento 2, Bologna.</li>
 				<li><b>Ulisse</b>: If you like to join or simply attend at the Ulisse team working you
