Anchors and index

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
 		to integrate embedded systems in every work I do.  Especially
 		if they are powerful enough to run OpenBSD and IPv6.</p>
 
+		<a href="#contacts">Contacts</a>
+		<a href="#publications">Publications</a>
+		<a href="#vulnerabilities">Vulnerabilities</a>
+		<a href="#software">Software</a>
+		<a href="#teaching">Teaching</a>
+		<a href="#other">Misc</a>
+		<a href="#blog">Blog</a>
+
+		<a id="contacts"></a><h3>Contacts</h3>
+
 		<p>To reach me you can use the following methods:
 			<ul>
 				<li><b>e-mail</b>: my addresses are:
@@ -57,7 +67,7 @@
 	</div>
 
 	<div id="publications">
-		<h3>Publications</h3>
+		<a id="publications"></a><h3>Publications</h3>
 		<ul>
 			<li>Berardi, Davide, et al. "Password similarity using probabilistic data structures." Journal of Cybersecurity and Privacy 1.1 (2021): 78-92.</li>
 			<li>Melis, Andrea, et al. "P-SCOR: Integration of Constraint Programming Orchestration and Programmable Data Plane." IEEE Transactions on Network and Service Management (2020).</li>
@@ -69,14 +79,14 @@
 	</div>
 
 	<div id="vulnerabilities">
-		<h3>Discovered vulnerabilities</h3>
+		<a id="vulnerabilities"></a><h3>Discovered vulnerabilities</h3>
 		<ul>
 			<li>CVE-2020-2703 - Oracle VM virtualbox.</li>
 		</ul>
 	</div>
 
 	<div id="code">
-		<h3>Projects and software</h3>
+		<a id="software"></a><h3>Projects and software</h3>
 		<ul>
 			<li><a href="https://github.com/rd235/cado">CADO</a>: Capability DO (like a sudo providing users with just the capabilities they need)</li>
 			<li><a href="https://github.com/berdav/snappy-fox">snappy-fox</a>: A Firefox morgue cache decompressor.</li>
@@ -85,7 +95,7 @@
 	</div>
 
 	<div id="material">
-		<h3>Useful Resources</h3>
+		<a id="teaching"></a><h3>Useful Resources</h3>
 		<ul>
 			<li><span id=students>README for students!</span> <a href="tesi.html">Istruzioni per la stesura della tesi di laurea</a> (Instruction to write Bachelor Thesis at University of Bologna, in Italian language).</li>
 			<li><a href="https://gitlab.com/ulisse_lab/teaching-material">Teaching material</a> for various security topics released under CopyLeft license</li>
@@ -94,7 +104,7 @@
 	</div>
 
 	<div id="other">
-		<h3>Other interests</h3>
+		<a id="other"></a><h3>Other interests</h3>
 		<ul>
 			<li><a href="https://github.com/berdav/entombed">Procedural generation</a></li>
 			<li><a href="https://github.com/Music-Machine-Learning/IMprovEEsation">Music</a></li>
@@ -104,7 +114,7 @@
 	</div>
 
 	<div id="blog">
-		<h3>Blog</h3>
+		<a id="blog"></a><h3>Blog</h3>
 		<ul>
 			<li>04 Dec 2020 <a href="post/20201204-1.html">Simulating Raspberry PI GPIO interaction with QEMU</a></li>
 			<li>27 Sep 2020 <a href="post/20200927-1.html">Reading emails: mutt + mbsync + mairix + imapfilter</a></li>
