--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<body>
 	<div id="maindiv">
 		<h1>D. - Personal site</h1>
+		<h3>About</h3>
 		<p>Hello there, this is my personal and work site/blog. You can find
 		here a list of the interesting things that I saw in the last time.</p>
 
