More specific tldr

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<h3>TL;DR</h3> Davide Berardi,
 			just a Ph.D. student / Tech of Computer Security.
 			I rant against proprietary software, I like
-			Embedded systems and Computer Networks.
+			Operating Systems and Computer Networks.
 		<h3>About</h3>
 		<p>Hello there, this is my personal and work site/blog. You can find
 		here a list of the interesting things that I saw in the last time.</p>
