--- a/index.html
+++ b/index.html
@@ -98,13 +98,20 @@
 			<li><a href="https://github.com/berdav/unibo-test-mec">Unibo Test Mec</a>: A 5g edge cloud API tester.</li>
 		</ul>
 	</div>
-
 	<div id="material">
 		<a id="teaching"></a><h3>Useful Resources</h3>
 		<ul>
 			<li><span id=students>README for students!</span> <a href="tesi.html">Istruzioni per la stesura della tesi di laurea</a> (Instruction to write Bachelor Thesis at University of Bologna, in Italian language).</li>
 			<li><a href="https://gitlab.com/ulisse_lab/teaching-material">Teaching material</a> for various security topics released under CopyLeft license</li>
 			<li><a href="https://www.youtube.com/channel/UCbvxfo0OWZMx6AJpnsZYiZg">Youtube channel of Ulisse group</a> with security seminars and video-lessons</li>
+			<li>Materiale per il laboratorio del corso di Sicurezza</a> (Slides for Security Laboratory, Bachelor Degree in Computer Science, in Italian language).
+			<ul>
+				<li><a href="seclab/download.html">Virtual Machine</a></li>
+				<li><a href="seclab/00-lab-intro.pdf">Introduzione al laboratorio</a></li>
+				<li><a href="seclab/01-lab.pdf">Esercitazione 1, Crittografia</a></li>
+			</ul>
+			</li>
+
 		</ul>
 	</div>
 
