--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 				<li><a href="seclab/download.html">Virtual Machine</a></li>
 				<li><a href="seclab/00-lab-intro.pdf">Introduzione al laboratorio</a></li>
 				<li><a href="seclab/01-lab.pdf">Esercitazione 1, Crittografia</a></li>
+				<li><a href="seclab/02-lab.pdf">Esercitazione 2, S/MIME</a></li>
 			</ul>
 			</li>
 
