--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 			<li>Materiale per il laboratorio del corso di Sicurezza</a> (Slides for Security Laboratory, Bachelor Degree in Computer Science, in Italian language).
 			<ul>
 				<li><a href="seclab/download.html">Virtual Machine</a></li>
+				<li><a href="seclab/vm-faq.html">F.A.Q.  e problemi comuni relativi alle VM.</a></li>
 				<li><a href="seclab/00-lab-intro.pdf">Introduzione al laboratorio</a></li>
 				<li><a href="seclab/01-lab.pdf">Esercitazione 1, Crittografia</a></li>
 				<li><a href="seclab/02-lab.pdf">Esercitazione 2, S/MIME</a></li>
