--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 			<li><a href="https://www.youtube.com/channel/UCbvxfo0OWZMx6AJpnsZYiZg">Youtube channel of Ulisse group</a> with security seminars and video-lessons</li>
 			<li>Materiale per il laboratorio del corso di Sicurezza</a> (Slides for Security Laboratory, Bachelor Degree in Computer Science, in Italian language).
 			<ul>
+				<!--<li><a href="seclab/risultati-2021.html">Risultati laboratorio 2021</a></li>-->
 				<li><a href="seclab/download.html">Virtual Machine</a></li>
 				<li><a href="seclab/vm-faq.html">F.A.Q.  e problemi comuni relativi alle VM.</a></li>
 				<li><a href="seclab/00-lab-intro.pdf">Introduzione al laboratorio</a></li>
