--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 				<li><a href="seclab/00-lab-intro.pdf">Introduzione al laboratorio</a></li>
 				<li><a href="seclab/01-lab.pdf">Esercitazione 1, Crittografia</a></li>
 				<li><a href="seclab/02-lab.pdf">Esercitazione 2, S/MIME</a></li>
+				<li><a href="seclab/03-lab.pdf">Esercitazione 3, PGP / GPG</a></li>
 			</ul>
 			</li>
 
