--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
 				<li><a href="seclab/01-lab.pdf">Esercitazione 1, Crittografia</a></li>
 				<li><a href="seclab/02-lab.pdf">Esercitazione 2, S/MIME</a></li>
 				<li><a href="seclab/03-lab.pdf">Esercitazione 3, PGP / GPG</a></li>
+				<li><a href="seclab/04-lab.pdf">Esercitazione 4, OTPW</a></li>
+				<li><a href="seclab/05-lab.pdf">Esercitazione 5, iptables</a></li>
 			</ul>
 			</li>
 
