--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
 			<li><span id=students>README for students!</span> <a href="tesi.html">Istruzioni per la stesura della tesi di laurea</a> (Instruction to write Bachelor Thesis at University of Bologna, in Italian language).</li>
 			<li><a href="https://gitlab.com/ulisse_lab/teaching-material">Teaching material</a> for various security topics released under CopyLeft license</li>
 			<li><a href="https://www.youtube.com/channel/UCbvxfo0OWZMx6AJpnsZYiZg">Youtube channel of Ulisse group</a> with security seminars and video-lessons</li>
+			<li><a href="theses.html">Theses list</a> in which I participated as co-supervisor</li>
 			<li>Materiale per il laboratorio del corso di Sicurezza</a> (Slides for Security Laboratory, Bachelor Degree in Computer Science, in Italian language).
 			<ul>
-				<li><span id=students>Laboratorio di sicurezza 2021</span> <a href="seclab/risultati-2021.html">Risultati laboratorio 2021</a></li>
 				<li><a href="seclab/download.html">Virtual Machine</a></li>
 				<li><a href="seclab/vm-faq.html">F.A.Q.  e problemi comuni relativi alle VM.</a></li>
 				<li><a href="seclab/00-lab-intro.pdf">Introduzione al laboratorio</a></li>
@@ -115,6 +115,7 @@
 				<li><a href="seclab/03-lab.pdf">Esercitazione 3, PGP / GPG</a></li>
 				<li><a href="seclab/04-lab.pdf">Esercitazione 4, OTPW</a></li>
 				<li><a href="seclab/05-lab.pdf">Esercitazione 5, iptables</a></li>
+				<li><span id=students>Laboratorio di sicurezza 2021</span> <a href="seclab/risultati-2021.html">Risultati laboratorio 2021</a></li>
 			</ul>
 			</li>
 
