--- a/theses.html
+++ b/theses.html
@@ -9,9 +9,16 @@
 		<div id="maindiv">
 			<a href="index.html">Home</a>
 			<h1>Theses in which I participated</h1>
-			<p>The following list is the list of theses which I've followed.
-			   If you want to remove the entry from this list, please, drop me an e-mail.</p>
-			<p>Obviously drop me an e-mail if I've accidentally not included your thesis in this list!</p>
+			<p>The following elements of this list are the
+			theses which I've followed.  Drop me an e-mail
+			if you want to:
+			<ul>
+				<li>make the thesis on the themes of networking, network and system security, and embedded system (if you want to introduce a theme, you're welcome to do so!);</li>
+				<li>have more information on some of the published theses;</li>
+				<li>add your thesis to this list (maybe I've forgot someone!);</li>
+				<li>remove your thesis from this list.</li>
+			</ul>
+			</p>
 			<h2>Master Theses</h2>
 				<table>
 					<tr><th>Role</th> <th>Year</th> <th>Degree and institute</th>      <th>Title</th></tr>
