added index photo and GPG key, removed IRC.

--- a/index.html
+++ b/index.html
@@ -47,14 +47,21 @@
 
 				You can easily check the correct address searching me on the university site.
 				Please, avoid <code>html</code> mail as much as you can[1] and do not expect a
-				low latency reply.</li>
+				low latency reply.
+				If you need GPG my key id is
+D52FA46C2302CDEB6C0415861A8A1CD40693B313 .[2]
+				</li>
 				<li><b>Telegram</b>: My nickname is composed by the first three letters of my family
 				name and the first three letters of my given name (with capital letters).  Usually I reply within a short
-				time.</li>
-				<li><b>IRC</b>: you can find me in
+				time.<br/>
+				Last known profile picture is:</br>
+				<img
+					style="margin-left:40%;border-radius:50%; width:25%; height:auto; " src="tg_profile.jpg"></img>
+				</li>
+				<!--<li><b>IRC</b>: you can find me in
 					freenode with the same Telegram
 					username (with only lowercase
-					letters).
+					letters).</li>-->
 				<li><b>Matrix</b>: My matrix account is <code>@family_name:ulis.se</code></li>
 				<li><b>Office</b>: You can find me during work hours at LIA, Laboratorio di Informatica
 				Avanzata at Viale risorgimento 2, Bologna.</li>
@@ -146,7 +153,10 @@
 
 	<div id="footnotes">
 	<hr/>
-	[1] Come on...you saw this "site".
+	[1] Come on...you saw this "site".<br/>
+	[2] I do not offer it trough this site because my institution do
+	    not offer personal pages with HTTPS, I know it, do not
+	    complain and search me on keyservers. :)
 	</div>
 	</body>
 </html>
