--- a/theses.html
+++ b/theses.html
@@ -21,7 +21,7 @@
 			</p>
 			<h2>Master Theses</h2>
 				<table>
-					<tr><th>Role</th> <th>Year</th> <th>Degree and institute</th>      <th>Title</th></tr>
+					<tr><th>Role</th> <th>Year</th> <th>Degree and university</th>      <th>Title</th></tr>
 					<tr><td>CoSupervisor</td> <td>2021</td> <td>Unibo,  Computer Engineering</td> <td>Progetto e realizzazione di un laboratorio per attività di Penetration Testing, Red Teaming e Blue teaming in ambiente Active Directory</td></tr>
 					<tr><td>CoSupervisor</td> <td>2021</td> <td>Unibo, Computer Engineering</td> <td>Algoritmi di calcolo del delay link per la rilevazione di attacchi in un ambiente SDN integrato ONOS-P4.</td></tr>
 					<tr><td>CoSupervisor</td> <td>2021</td> <td>Unibo (FC), Computer Science and Engineering</td> <td>Analisi e ricostruzione di flussi TCP con il software Caronte</td></tr>
@@ -29,7 +29,7 @@
 				</table>
 			<h2>Bachelor Theses</h2>
 				<table>
-					<tr><th>Role</th> <th>Year</th> <th>Degree and institute</th>      <th>Title</th></tr>
+					<tr><th>Role</th> <th>Year</th> <th>Degree and university</th>      <th>Title</th></tr>
 					<tr><td>CoSupervisor</td> <td>2021</td> <td>Unibo, Computer Engineering</td> <td>Progettazione e realizzazione di TSN Digital Twin tramite sistemi di virtualizzazione</td></tr>
 					<tr><td>CoSupervisor</td> <td>2021</td> <td>Unibo, Computer Engineering</td> <td>Progetto di Sistemi Basati su Deep Neural Network per la rilevazione di similarità tra Password</td></tr>
 					<tr><td>CoSupervisor</td> <td>2021</td> <td>Unibo, Computer Engineering</td> <td>Integrazione di un sistema di Denial of Service Detection basato su P4 in architetture SDN</td></tr>
