Norobots in seclab redirect

--- a/seclab/download.html
+++ b/seclab/download.html
@@ -1,5 +1,7 @@
 <html>
 	<head>
+	<!-- Do not index this page -->
+	<meta name="robots" content="noindex" />
 	<meta http-equiv="Refresh" content="0;
 url='https://liveunibo-my.sharepoint.com/:f:/g/personal/davide_berardi_unibo_it/EoKKQWSH94FCljcM0ConomcBdZNSKM9VJElXRduzupQtTg'" />
 	</head>
