--- a/index.html
+++ b/index.html
@@ -154,9 +154,7 @@ D52FA46C2302CDEB6C0415861A8A1CD40693B313 .[2]
 	<div id="footnotes">
 	<hr/>
 	[1] Come on...you saw this "site".<br/>
-	[2] I do not offer it trough this site because my university do
-	    not offer personal pages with HTTPS, I know it, do not
-	    complain and search me on keyservers. :)
+	[2] <a href="pubkey.pem">You can also find it here</a>
 	</div>
 	</body>
 </html>
