--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ D52FA46C2302CDEB6C0415861A8A1CD40693B313 .[2]
 		<a id="software"></a><h3>Projects and software</h3>
 		<ul>
 			<li><a href="https://github.com/rd235/cado">CADO</a>: Capability DO (like a sudo providing users with just the capabilities they need)</li>
+			<li><a href="https://github.com/berdav/greenpass">greenpass</a>: a scriptable covid european digital certification verifier (library and executable).</li>
 			<li><a href="https://github.com/berdav/snappy-fox">snappy-fox</a>: A Firefox morgue cache decompressor.</li>
 			<li><a href="https://github.com/berdav/unibo-test-mec">Unibo Test Mec</a>: A 5g edge cloud API tester.</li>
 		</ul>
