--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@ D52FA46C2302CDEB6C0415861A8A1CD40693B313 .[2]
 				<li><a href="seclab/03-lab.pdf">Esercitazione 3, PGP / GPG</a></li>
 				<li><a href="seclab/04-lab.pdf">Esercitazione 4, OTPW</a></li>
 				<li><a href="seclab/05-lab.pdf">Esercitazione 5, iptables</a></li>
-				<li><span id=students>Laboratorio di sicurezza 2021</span> <a href="seclab/risultati-2021.html">Risultati laboratorio 2021</a></li>
+				<li><span id=students>Laboratorio di sicurezza 2022</span> <a href="seclab/risultati-2022.html">Risultati laboratorio 2022</a></li>
+				<li><span>Laboratorio di sicurezza 2021</span> <a href="seclab/risultati-2021.html">Risultati laboratorio 2021</a></li>
 			</ul>
 			</li>
 
