--- a/index.html
+++ b/index.html
@@ -58,16 +58,14 @@ D52FA46C2302CDEB6C0415861A8A1CD40693B313 .[2]
 				<img
 					style="margin-left:40%;border-radius:50%; width:25%; height:auto; " src="tg_profile.jpg"></img>
 				</li>
-				<!--<li><b>IRC</b>: you can find me in
-					freenode with the same Telegram
-					username (with only lowercase
-					letters).</li>-->
-				<li><b>Matrix</b>: My matrix account is <code>@family_name:ulis.se</code></li>
-				<li><b>Office</b>: You can find me during work hours at LIA, Laboratorio di Informatica
-				Avanzata at Viale risorgimento 2, Bologna.</li>
+				<li><b>Office</b>: You can find me
+				during work hours at Aula 7 in the
+				<a href="https://goo.gl/maps/JjxDd9Jp6nKXnsxh6">department of industrial chemistry
+				(Dipartimento di chimica industriale),
+				Viale Risorgimento 4, Bologna</a>.
+				</li>
 				<li><b>Ulisse</b>: If you like to join or simply attend at the Ulisse team working you
-				can find me at laboratorio 2 in Viale risorgimento 2, Bologna Wednesday evening
-				from 18:30 to 23:00.</li>
+				feel free to ask information in private.</li>
 				<li><b>ADMStaff</b>: As for the Ulisse team, if you have some questions about ADMStaff
 				you can occasionally find me in the ADMStanzetta, inside the laboratory of computer
 				science in via Ranzani complex.
