--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@ D52FA46C2302CDEB6C0415861A8A1CD40693B313 .[2]
 				<li><b>Telegram</b>: My nickname is composed by the first three letters of my family
 				name and the first three letters of my given name (with capital letters).  Usually I reply within a short
 				time.<br/>
-				Last known profile picture is:</br>
+				Last known profile picture and bio are:</br>
 				<img
 					style="margin-left:40%;border-radius:50%; width:25%; height:auto; " src="tg_profile.jpg"></img>
+				</br>
+				<img
+					style="width:98%;" src="tg_bio.jpg"></img>
 				</li>
 				<li><b>Office</b>: You can find me
 				during work hours at Aula 7 in the
