--- a/tesi.html
+++ b/tesi.html
@@ -274,7 +274,7 @@ s/interfaccie/interfacce/</code></pre><br/></li><br/>
 			<h2>Invio Tesi</h2>
 			Se stai eseguendo una tesi con il Prof. Prandini
 			ricordati di inviare ogni domanda <b>sempre</b>
-			al seguente indirizzo>:<br/><br/>
+			al seguente indirizzo:<br/><br/>
 			<pre><code>netsecresearch [at] live.unibo.it</code></pre><br/><br/>
 			Non è necessario inviare la tesi capitolo per
 			capitolo.  Quando vi sentite pronti, potete
