--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 	<div id="maindiv">
 		<h1>D. - Personal site</h1>
 		<h3>TL;DR</h3> Davide Berardi,
-			just a Ph.D. student / Tech of Computer Security.
+			just a research fellow / Tech of Computer Security.
 			I rant against proprietary software, I like
 			Operating Systems and Computer Networks.
 		<h3>About</h3>
 		<p>Hello there, this is my personal and work site/blog. You can find
 		here a list of the interesting things that I saw in the last time.</p>
 
-		<p>Currently, I am a PhD student at university of Bologna and
+		<p>Currently, I am a research fellow at university of Bologna and
 		my research is focused on network security.  I am a member of
 		<a href="https://ulisse.unibo.it/">Ulisse</a> research team and, sometimes, I play CTFs.  I am also a proud member of
 		the <a href="http://admstaff.students.cs.unibo.it">ADMStaff</a> team and the <a href="http://virtualsquare.org">VirtualSquare</a> group.
