--- a/index.html
+++ b/index.html
@@ -9,22 +9,35 @@
 	<div id="maindiv">
 		<h1>D. - Personal site</h1>
 		<h3>TL;DR</h3> Davide Berardi,
-			just a research fellow / Tech of Computer Security.
-			I rant against proprietary software, I like
-			Operating Systems and Computer Networks.
+			Adjunct Professor / Startupper / Tech of
+			Computer Security.  I rant against proprietary
+			software, I like Operating Systems and Computer
+			Networks.
 		<h3>About</h3>
 		<p>Hello there, this is my personal and work site/blog. You can find
 		here a list of the interesting things that I saw in the last time.</p>
 
-		<p>Currently, I am a research fellow at university of Bologna and
-		my research is focused on network security.  I am a member of
-		<a href="https://ulisse.unibo.it/">Ulisse</a> research team and, sometimes, I play CTFs.  I am also a proud member of
-		the <a href="http://admstaff.students.cs.unibo.it">ADMStaff</a> team and the <a href="http://virtualsquare.org">VirtualSquare</a> group.
+		<p>Currently, I am a founder and CSO of a startup of
+		CyberSecurity: <a href="https://mon5.it">MON5</a>, we do
+		industrial cybersecurity and monitoring.  Write to us
+		(<code>team@mon5.it</code>) if you want to work with us.</p>
+
+		<p>I am also an Adjunct Professor at University of
+		Bologna and Unimercatorum and my research is focused on
+		industrial network security.</p>
+
+		<p>I was a member of
+		<a href="https://ulisse.unibo.it/">Ulisse</a> research
+		team and, sometimes, I played CTFs.  I also was a proud member of
+		the <a
+		href="http://admstaff.students.cs.unibo.it">ADMStaff</a> team and the <a
+		href="http://virtualsquare.org">VirtualSquare</a> group.
 		</p>
 
-		<p>In a previous work-life I was a firmware engineer, so I tend
+		<p>In a previous work-life I was a Firmware Engineer, so I tend
 		to integrate embedded systems in every work I do.  Especially
-		if they are powerful enough to run OpenBSD and IPv6.</p>
+		if they are powerful enough to run OpenBSD /
+		microkernels and IPv6.</p>
 
 		<a href="#contacts">Contacts</a>
 		<a href="#publications">Publications</a>
@@ -40,20 +53,18 @@
 			<ul>
 				<li><b>e-mail</b>: my addresses are:
 					<ol>
-						<li><code>${given_name}.${family_name}@unibo.it</code></li>
-						<li><code>${given_name}.${family_name}6@unibo.it</code></li>
-						<li><code>${given_name}.${family_name}@studio.unibo.it</code></li>
+						<li><code>davide.berardi@mon5.it</code></li>
+						<li><code>davide.berardi@unibo.it</code></li>
+						<li><code>davide.berardi@unimercatorum.it</code></li>
 					</ol>
 
-				You can easily check the correct address searching me on the university site.
 				Please, avoid <code>html</code> mail as much as you can[1] and do not expect a
 				low latency reply.
 				If you need GPG my key id is
 D52FA46C2302CDEB6C0415861A8A1CD40693B313 .[2]
 				</li>
-				<li><b>Telegram</b>: My nickname is composed by the first three letters of my family
-				name and the first three letters of my given name (with capital letters).  Usually I reply within a short
-				time.<br/>
+				<li><b>Telegram</b>: My nickname is
+				@BerDav . Usually I reply within a short time.<br/>
 				Last known profile picture and bio are:</br>
 				<img
 					style="margin-left:40%;border-radius:50%; width:25%; height:auto; " src="tg_profile.jpg"></img>
@@ -61,25 +72,24 @@ D52FA46C2302CDEB6C0415861A8A1CD40693B313 .[2]
 				<img
 					style="width:98%;" src="tg_bio.jpg"></img>
 				</li>
-				<li><b>Office</b>: You can find me
-				during work hours at Aula 7 in the
-				<a href="https://goo.gl/maps/JjxDd9Jp6nKXnsxh6">department of industrial chemistry
-				(Dipartimento di chimica industriale),
-				Viale Risorgimento 4, Bologna</a>.
-				</li>
-				<li><b>ADMStaff</b>: As for the Ulisse team, if you have some questions about ADMStaff
-				you can occasionally find me in the ADMStanzetta, inside the laboratory of computer
-				science in via Ranzani complex.
+				<li><b>Office</b>: Currently I'm based
+				in Bologna (Italy).
 				<li>Avoid as much as you can <code>skype</code>,
 				<code>whatsapp</code> and <code>doc[x]</code> documents.
-				I am against the concept of closed source and proprietary software, therefore I don't use them.</li>
+				I am against the concept of closed
+				source and proprietary software, therefore I
+				don't use them.</li>
 			</ul>
 		</p>
 	</div>
 
 	<div id="publications">
-		<a id="publications"></a><h3>Publications</h3>
+		<a id="publications"></a><h3>Publications (not exaustive list)</h3>
 		<ul>
+			<li>Berardi, Davide, et al. "Time sensitive networking security: issues of precision time protocol and its implementation". Cybersecurity 6 (1), 1-13 (2023).</li>
+			<li>Berardi, Davide et al. "Data Flooding against Ransomware: Concepts and Implementations" Computers and Security 131, 103295 (2023)</li>
+			<li>Berardi, Davide et al. "When Operation Technology Meets Information Technology: Challenges and Opportunities" Future Internet 15 (3), 95 (2023)</li>
+			<li>Berardi, Davide et al. "Microservice security: a systematic literature review" PeerJ Computer Science 8, e779 (2022)</li>
 			<li>Berardi, Davide, et al. "Password similarity using probabilistic data structures." Journal of Cybersecurity and Privacy 1.1 (2021): 78-92.</li>
 			<li>Melis, Andrea, et al. "P-SCOR: Integration of Constraint Programming Orchestration and Programmable Data Plane." IEEE Transactions on Network and Service Management (2020).</li>
 			<li>Berardi, Davide, et al. "Sustainable Infrastructure Monitoring for Security-Oriented Purposes." Proceedings of the 6th EAI International Conference on Smart Objects and Technologies for Social Good. 2020.</li>
