--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 D52FA46C2302CDEB6C0415861A8A1CD40693B313 .[2]
 				</li>
 				<li><b>Telegram</b>: My nickname is
-				@BerDav . Usually I reply within a short time.<br/>
+				<code>@BerDav</code> . Usually I reply within a short time.<br/>
 				Last known profile picture and bio are:</br>
 				<img
 					style="margin-left:40%;border-radius:50%; width:25%; height:auto; " src="tg_profile.jpg"></img>
