--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ D52FA46C2302CDEB6C0415861A8A1CD40693B313 .[2]
 			<li><a href="https://github.com/berdav/entombed">Procedural generation</a></li>
 			<li><a href="https://github.com/Music-Machine-Learning/IMprovEEsation">Music</a></li>
 			<li>Radio Communication</li>
-			<li>Mathematical models for juggling</li>
+			<li><a href="https://www.moonboard.com/">Climbing</a></li>
 		</ul>
 	</div>
 
