--- a/index.html
+++ b/index.html
@@ -9,22 +9,32 @@
 	<div id="maindiv">
 		<h1>D. - Personal site</h1>
 		<h3>TL;DR</h3> Davide Berardi,
-			Adjunct Professor / Startupper / Tech of
+			Adjunct Professor / Freelancer of
 			Computer Security.  I rant against proprietary
 			software, I like Operating Systems and Computer
 			Networks.
 		<h3>About</h3>
-		<p>Hello there, this is my personal and work site/blog. You can find
-		here a list of the interesting things that I saw in the last time.</p>
+		<p>Hello there, this is my personal and work site/blog.
+		You can find here a list of the interesting things that I saw in the
+		last time.</p>
 
-		<p>Currently, I am a founder and CSO of a startup of
-		CyberSecurity: <a href="https://mon5.it">MON5</a>, we do
-		industrial cybersecurity and monitoring.  Write to us
-		(<code>team@mon5.it</code>) if you want to work with us.</p>
+		<p>I am a freelancer of Computer Security and Embedded
+		systems. I work mainly as a consultant and creator
+		of security solutions and delicate Operating System
+		adjustments. Also, I tend to integrate cloud automation
+		in every part if required.</p>
 
-		<p>I am also an Adjunct Professor at University of
-		Bologna and Unimercatorum and my research is focused on
-		industrial network security.</p>
+		<p>I am also an Adjunct Professor at
+		<a href="https://unimercatorum.it">Universitas Mercatorum</a>,
+		and previously, at
+		<a href="https://unibo.it">University of Bologna</a> (where I
+		got my Ph.D.). my research is focused on industrial
+		network and systems security.</p>
+
+		<p>I was a founder and CSO of a startup of
+		CyberSecurity: <a href="https://mon5.it">MON5</a>, where
+		I was analyzing methods and technologies for
+		industrial cybersecurity and monitoring.</p>
 
 		<p>I was a member of
 		<a href="https://ulisse.unibo.it/">Ulisse</a> research
