--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<a href="https://unimercatorum.it">Universitas Mercatorum</a>,
 		and previously, at
 		<a href="https://unibo.it">University of Bologna</a> (where I
-		got my Ph.D.). my research is focused on industrial
+		got my Ph.D.). My research is focused on industrial
 		network and systems security.</p>
 
 		<p>I was a founder and CSO of a startup of
@@ -61,10 +61,8 @@
 
 		<p>To reach me you can use the following methods:
 			<ul>
-				<li><b>e-mail</b>: my addresses are:
+				<li><b>e-mail</b>: my (work) addresses are:
 					<ol>
-						<li><code>davide.berardi@mon5.it</code></li>
-						<li><code>davide.berardi@unibo.it</code></li>
 						<li><code>davide.berardi@unimercatorum.it</code></li>
 					</ol>
 
