--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div id="maindiv">
 		<h1>D. - Personal site</h1>
 		<h3>TL;DR</h3> Davide Berardi,
-			Adjunct Professor / Freelancer of
+			Tenure Track Researcher / Freelancer of
 			Computer Security.  I rant against proprietary
 			software, I like Operating Systems and Computer
 			Networks.
@@ -24,9 +24,9 @@
 		adjustments. Also, I tend to integrate cloud automation
 		in every part if required.</p>
 
-		<p>I am also an Adjunct Professor at
+		<p>I am also a Tenure Track Researcher at
 		<a href="https://unimercatorum.it">Universitas Mercatorum</a>,
-		and previously, at
+		and previously, an Adjunct Professor at
 		<a href="https://unibo.it">University of Bologna</a> (where I
 		got my Ph.D.). My research is focused on industrial
 		network and systems security.</p>
@@ -93,18 +93,7 @@ D52FA46C2302CDEB6C0415861A8A1CD40693B313 .[2]
 
 	<div id="publications">
 		<a id="publications"></a><h3>Publications (not exaustive list)</h3>
-		<ul>
-			<li>Berardi, Davide, et al. "Time sensitive networking security: issues of precision time protocol and its implementation". Cybersecurity 6 (1), 1-13 (2023).</li>
-			<li>Berardi, Davide et al. "Data Flooding against Ransomware: Concepts and Implementations" Computers and Security 131, 103295 (2023)</li>
-			<li>Berardi, Davide et al. "When Operation Technology Meets Information Technology: Challenges and Opportunities" Future Internet 15 (3), 95 (2023)</li>
-			<li>Berardi, Davide et al. "Microservice security: a systematic literature review" PeerJ Computer Science 8, e779 (2022)</li>
-			<li>Berardi, Davide, et al. "Password similarity using probabilistic data structures." Journal of Cybersecurity and Privacy 1.1 (2021): 78-92.</li>
-			<li>Melis, Andrea, et al. "P-SCOR: Integration of Constraint Programming Orchestration and Programmable Data Plane." IEEE Transactions on Network and Service Management (2020).</li>
-			<li>Berardi, Davide, et al. "Sustainable Infrastructure Monitoring for Security-Oriented Purposes." Proceedings of the 6th EAI International Conference on Smart Objects and Technologies for Social Good. 2020.</li>
-			<li>Berardi, Davide, et al. "TechNETium: Atomic Predicates and Model Driven Development to Verify Security Network Policies." 2020 IEEE 17th Annual Consumer Communications &amp; Networking Conference (CCNC). IEEE, 2020.</li>
-			<li>Berardi, Davide, et al. "Security network policy enforcement through a SDN framework." 2018 28th International Telecommunication Networks and Applications Conference (ITNAC). IEEE, 2018.</li>
-			<li>Melis, Andrea, et al. "A Policy Checker Approach for Secure Industrial SDN." 2018 2nd Cyber Security in Networking Conference (CSNet). IEEE, 2018.</li>
-		</ul>
+		<a href="https://scholar.google.com/citations?user=oHDgrJQAAAAJ&hl=it">For the list of publications please refer to my Google Scholar page</a>
 	</div>
 
 	<div id="vulnerabilities">
@@ -126,11 +115,12 @@ D52FA46C2302CDEB6C0415861A8A1CD40693B313 .[2]
 	<div id="material">
 		<a id="teaching"></a><h3>Useful Resources</h3>
 		<ul>
-			<li><span id=students>README for students!</span> <a href="tesi.html">Istruzioni per la stesura della tesi di laurea</a> (Instruction to write Bachelor Thesis at University of Bologna, in Italian language).</li>
+			<li><span id=students>README for
+students!</span> <a href="tesi.html">Istruzioni per la stesura della tesi di laurea</a> (Instruction to write Bachelor Thesis with me, in Italian language).</li>
 			<li><a href="https://gitlab.com/ulisse_lab/teaching-material">Teaching material</a> for various security topics released under CopyLeft license</li>
 			<li><a href="https://www.youtube.com/channel/UCbvxfo0OWZMx6AJpnsZYiZg">Youtube channel of Ulisse group</a> with security seminars and video-lessons</li>
-			<li><a href="theses.html">Theses list</a> in which I participated as co-supervisor</li>
-			<li>Materiale per il laboratorio del corso di Sicurezza</a> (Slides for Security Laboratory, Bachelor Degree in Computer Science, in Italian language).
+			<!--<li><a href="theses.html">Theses list</a> in which I participated as co-supervisor</li>-->
+			<!--<li>Materiale per il laboratorio del corso di Sicurezza</a> (Slides for Security Laboratory, Bachelor Degree in Computer Science, in Italian language).
 			<ul>
 				<li><a href="seclab/download.html">Virtual Machine</a></li>
 				<li><a href="seclab/vm-faq.html">F.A.Q.  e problemi comuni relativi alle VM.</a></li>
@@ -143,7 +133,7 @@ D52FA46C2302CDEB6C0415861A8A1CD40693B313 .[2]
 				<li><span id=students>Laboratorio di sicurezza 2022</span> <a href="seclab/risultati-2022.html">Risultati laboratorio 2022</a></li>
 				<li><span>Laboratorio di sicurezza 2021</span> <a href="seclab/risultati-2021.html">Risultati laboratorio 2021</a></li>
 			</ul>
-			</li>
+			</li>-->
 
 		</ul>
 	</div>
