--- a/tesi.html
+++ b/tesi.html
@@ -205,8 +205,8 @@ corretti anche se possono sembrare molto convincenti. Facciamo un rapido control
 					<img src="data/chatgpt.png" alt="Dialogo con ChatGPT"/>
 					<img src="data/chatgpt2.png" alt="Dialogo con ChatGPT"/>
 					<br/>
-					Per i più interessati, in fondo
-					a questo documento potete trovare un'interessante allucinazione sul
+					Per i più curiosi, in fondo
+					a questa pagina potete trovare un'interessante allucinazione sul
 					codice.
 					<br/>
 					Ovviamente potrebbe succedere
