--- a/tesi.html
+++ b/tesi.html
@@ -367,6 +367,12 @@ s/interfaccie/interfacce/</code></pre><br/></li><br/>
 			alternativi alle semplici e-mail (Meet, Teams o
 			Telegram).<br/>
 			<br/>
+			Evitate di inviare la tesi non in formato PDF
+			(DOCX, ODT, ...). Il formato PDF è quello da
+			consegnare sul sito ufficiale, consegnando altro
+			potrei perdere problemi tipografici.
+			<br/>
+			<br/>
 			N.B.: Normalmente ho <u>molti</u> tesisti
 			per sessione.  Consegnate la tesi per tempo!
 			<br/>
