--- a/tesi.html
+++ b/tesi.html
@@ -21,6 +21,11 @@
 			<br/>
 			I punti riguardano sia Tesi triennali che Tesi magistrali.<br/>
 			<br/>
+			TL;DR: Questo documento è lungo, non c'è TL;DR.
+			Per svolgere la tesi dovrete leggere almeno
+			10/15 documenti, non fermatevi già a questo. :)
+			<br/>
+			<br/>
 			<h2>Richiesta della tesi</h2>
 			Per richiedere la tesi è necessario inviare una
 			mail al mio indirizzo istituzionale contenenti queste informazioni
