--- a/tesi.html
+++ b/tesi.html
@@ -502,9 +502,10 @@ adattarla a questi formati.</li>
 Se hai altre domande o vuoi modificare il programma per casi specifici, fammi sapere! 😊
 <br/>
 <hr/>
-Nonostante sia veramente credibile e sfido chiunque, dato uno sguardo
-veloce, di accorgersi dell'errore. Si può facilmente notare che (a parte la schematicità del discorso,
-pieno di elenchi puntati), il programma non è corretto. Basta lanciarlo:
+Nonostante sia veramente credibile, dato uno sguardo
+veloce è difficile accorgersi dell'errore. Si può facilmente notare che
+(a parte la schematicità del discorso, pieno di elenchi puntati) che il
+programma non è corretto. Basta lanciarlo:
 <br/>
 <br/>
 <pre><code>guest@generic:~$ python3 /tmp/test.py
