--- a/tesi.html
+++ b/tesi.html
@@ -512,7 +512,7 @@ programma non è corretto. Basta lanciarlo:
 Indirizzi IPv6 trovati:
 0370:</code></pre><br/>
 Non sono un grande esperto di ChatGPT e non l'ho "fregato" con richieste
-patricolari o indotto in tentazione, ho solo creato un paio di programmi
+particolari o indotto in tentazione, ho solo creato un paio di programmi
 prima di incorrere in un suo strafalcione...
 
 		</div>
