--- a/tesi.html
+++ b/tesi.html
@@ -513,8 +513,12 @@ Indirizzi IPv6 trovati:
 0370:</code></pre><br/>
 Non sono un grande esperto di ChatGPT e non l'ho "fregato" con richieste
 particolari o indotto in tentazione, ho solo creato un paio di programmi
-prima di incorrere in un suo strafalcione...
-
+prima di incorrere in un suo strafalcione...<br/>
+<br/>
+Sono conscio della prossima uscita di o3 e del poter fare
+chain-of-thought, sono tecniche che consiglio di provare, ma di essere
+*estremamente* confidenti di come aggiustare l'output di ChatGPT,
+normalmente schematico e robotico.
 		</div>
 	</body>
 </html>
