100% on internet.nl (website)

--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
 		if they are powerful enough to run OpenBSD /
 		microkernels and IPv6.</p>
 
+		<p>As you can see I'm not the frontend person, I like more securing
+		stuff. This website for instance has the 100% pass on
+		<a href="https://internet.nl/">internet.nl</a>.</p>
+		<p style="text-align:center">
+		<img
+		src="https://internet.nl/static/embed-badge-websitetest.svg"
+		alt="100% badge from internet.nl"
+		>
+		</img>
+		</p>
+
 		<a href="#contacts">Contacts</a>
 		<a href="#publications">Publications</a>
 		<a href="#vulnerabilities">Vulnerabilities</a>
