100% badge local svg

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<a href="https://internet.nl/">internet.nl</a>.</p>
 		<p style="text-align:center">
 		<img
-		src="https://internet.nl/static/embed-badge-websitetest.svg"
+		src="embed-badge-websitetest.svg"
 		alt="100% badge from internet.nl"
 		>
 		</img>
