CSP compliance: removing inline styles

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<p>As you can see I'm not the frontend person, I like more securing
 		stuff. This website for instance has the 100% pass on
 		<a href="https://internet.nl/">internet.nl</a>.</p>
-		<p style="text-align:center">
+		<p class=center>
 		<img
 		src="embed-badge-websitetest.svg"
 		alt="100% badge from internet.nl"
@@ -86,10 +86,10 @@
 				<code>@BerDav</code> . Usually I reply within a short time.<br/>
 				Last known profile picture and bio are:</br>
 				<img
-					style="margin-left:40%;border-radius:50%; width:25%; height:auto; " src="tg_profile.jpg"></img>
+					class=profilepic src="tg_profile.jpg"></img>
 				</br>
 				<img
-					style="width:98%;" src="tg_bio.jpg"></img>
+					class=fullwidth src="tg_bio.jpg"></img>
 				</li>
 				<li><b>Office</b>: Currently I'm based
 				in Bologna (Italy).
